WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60443
REGRESSION (
r85499
): Inline images in iChat overflow their chat bubbles
https://bugs.webkit.org/show_bug.cgi?id=60443
Summary
REGRESSION (r85499): Inline images in iChat overflow their chat bubbles
mitz
Reported
2011-05-07 17:40:29 PDT
<
rdar://problem/9403055
> Inline images in iChat conversations overflow the chat bubbles, overlapping the next message. Caused by
r85499
, the fix for
bug 58006
.
Attachments
Reduction
(323 bytes, text/html)
2011-05-07 17:41 PDT
,
mitz
no flags
Details
The anti-squeeze logic need not apply to positioned replaced objects
(21.91 KB, patch)
2011-05-07 18:22 PDT
,
mitz
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-05-07 17:41:38 PDT
Created
attachment 92702
[details]
Reduction
mitz
Comment 2
2011-05-07 18:22:01 PDT
Created
attachment 92705
[details]
The anti-squeeze logic need not apply to positioned replaced objects
WebKit Review Bot
Comment 3
2011-05-07 18:24:10 PDT
Attachment 92705
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/WebCore/rendering/RenderBox.cpp:2019: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Source/WebCore/rendering/RenderBox.cpp:2021: Should have only a single space after a punctuation in a comment. [whitespace/comments] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 4
2011-05-07 20:46:08 PDT
Comment on
attachment 92705
[details]
The anti-squeeze logic need not apply to positioned replaced objects View in context:
https://bugs.webkit.org/attachment.cgi?id=92705&action=review
> Source/WebCore/ChangeLog:13 > + doesnÕt affect the table cellÕs height).
There are weird characters for the apostrophes in this line.
Maciej Stachowiak
Comment 5
2011-05-07 23:35:02 PDT
Comment on
attachment 92705
[details]
The anti-squeeze logic need not apply to positioned replaced objects r=me
mitz
Comment 6
2011-05-07 23:43:32 PDT
Fixed in
r86024
. <
http://trac.webkit.org/changeset/86024
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug