<rdar://problem/9403055> REGRESSION (r85499): Inline images in iChat overflow their chat bubbles https://bugs.webkit.org/show_bug.cgi?id=60443

Reviewed by Maciej Stachowiak.

Source/WebCore:

Test: fast/replaced/table-percent-height-positioned.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeReplacedLogicalHeightUsing): Do not apply the logic to prevent precent-height
replaced elements from being squeezed by table cells when the replaced element is positioned (and thus
doesn’t affect the table cell’s height).

LayoutTests:

* fast/replaced/table-percent-height-positioned-expected.png: Added.
* fast/replaced/table-percent-height-positioned-expected.txt: Added.
* fast/replaced/table-percent-height-positioned.html: Added.



Canonical link: https://commits.webkit.org/75697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86024 268f45cc-cd09-0410-ab3c-d52691b4dbfc